--- a/settingwindow.ui
+++ b/settingwindow.ui
@@ -29,27 +29,52 @@
     </widget>
    </item>
    <item>
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout_10">
      <item>
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>保存格式</string>
-       </property>
-      </widget>
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>保存格式</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QComboBox" name="comboBox_saveType">
+         <item>
+          <property name="text">
+           <string>PNG</string>
+          </property>
+         </item>
+         <item>
+          <property name="text">
+           <string>JPG</string>
+          </property>
+         </item>
+        </widget>
+       </item>
+      </layout>
      </item>
      <item>
-      <widget class="QComboBox" name="comboBox_saveType">
+      <layout class="QHBoxLayout" name="horizontalLayout_9">
        <item>
-        <property name="text">
-         <string>PNG</string>
-        </property>
+        <widget class="QLabel" name="label_jpg_quality">
+         <property name="text">
+          <string>JPG质量</string>
+         </property>
+        </widget>
        </item>
        <item>
-        <property name="text">
-         <string>JPG</string>
-        </property>
+        <widget class="QSpinBox" name="spinBox_jpg_quality">
+         <property name="maximum">
+          <number>100</number>
+         </property>
+         <property name="value">
+          <number>100</number>
+         </property>
+        </widget>
        </item>
-      </widget>
+      </layout>
      </item>
     </layout>
    </item>
